# esp32_ros

./: CMakeLists.txt  README.md  package.xml  schematic.drawio  setup.py
config/: ov2640.yaml
firmware/: Camera.h  ESPcar.ino  Lidar.h  Motors.h  Sockets.h  VL53L0X.cpp  app_httpd.cpp
firmware/reference/: esp32-camera-sensor.h at master · espressif-esp32-camera.url
launch/: ackermann.launch  automove.launch  camera.launch  car.launch  diffdrive.launch
nodes/: ackermann.py  automove.py  car.py  diffdrive.py
