<package format="2">
	<name>esp32_ros</name>
	<version>0.0.1</version>
	<description>ESP32-CAM ROS driver.</description>

	<maintainer email="asd@fg.com">MoffKalast</maintainer>

	<author>MoffKalast</author>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>std_msgs</depend>

	<build_depend>message_generation</build_depend>
	<build_export_depend>message_runtime</build_export_depend>

	<exec_depend>message_runtime</exec_depend>
	<exec_depend>rospy</exec_depend>

</package>
